2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 384940 – handle rejecting jobs and authentication meaningfully

	Patch by Marek Kasik, icons by Mike Langlie:
	* gtk/gtk.symbols:
	* gtk/gtkprintbackend.h:
	* gtk/gtkprinter.[hc]: Add new paused and accepting-jobs properties
	and getters/setters.

	* gtk/gtkstock.h:
	* gtk/gtkiconfactory.c:
	* gtk/Makefile.am:
	* gtk/stock-icons/{16,24}/gtk-print-paused.{png,svg}: New icon.

	* modules/printbackends/cups/gtkprintbackendcups.c: 
	* gtk/gtkprintunixdialog.c: Handle paused and job-rejecting 
	printers.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Add a test to see if GIO can sniff image data,
	this should make gdk-pixbuf use its own sniffing again, on OS X.

2008-07-15  Xavier Claessens  <xclaesse@gmail.com>

	Bug 542523 – GtkTextTag should handle setting properties to NULL

	* gtk/gtktexttag.c (gtk_text_tag_set_property): Unset the color when
	setting it to NULL instead of displaying a warning.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 479780 – Bookmarks in left pane of FileChooser cannot be renamed

	* gtk/gtkfilechooserdefault.c (shortcuts_build_popup_menu):
	Call shortcuts_check_popup_sensitivity() every time the
	menu is popped up. Problem reported by Hong Jen Yee
	
2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 488766 – GtkFileChooserButton doesn't clear icon after
	gtk_file_chooser_unselect_all

	* gtk/gtkfilechooserbutton.c (update_label_and_image): Unset
	the image when the label is set to "(None)". Reported by
	Neil Roberts

	* tests/testfilechooserbutton.c: Add an "Unselect all" button.

2008-07-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 507394 – mem leak from gtk_selection_add_targets

	* gtk/gtkoldeditable.c: Free target lists in finalize.
	Reported by Christian Persch

2008-07-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtktypeutils.[hc]: Complete the deprecation of gtk_type_class.
